xorgxrdp (1:0.2.12-1) unstable; urgency=low

  * New upstream version

 -- Thorsten Glaser <tg@mirbsd.de>  Fri, 10 Jan 2020 22:21:42 +0100

xorgxrdp (1:0.2.9-1) unstable; urgency=medium

  * New upstream version.
  * Bump Standards-Version, no changes needed.

 -- Dominik George <natureshadow@debian.org>  Sun, 13 Jan 2019 13:31:28 +0100

xorgxrdp (1:0.2.8-1) unstable; urgency=medium

  * New upstream version.
  * Bump Standards-Version to 4.2.1.
    + No changes needed.
  * Refresh patches.

 -- Dominik George <natureshadow@debian.org>  Wed, 26 Sep 2018 22:57:56 +0200

xorgxrdp (1:0.2.6-1) unstable; urgency=medium

  * Split package from xrdp source.

 -- Dominik George <natureshadow@debian.org>  Sat, 31 Mar 2018 18:44:01 +0200