@@ -10,14 +10,15 @@ Priority: optional
 Build-Depends:
  autoconf (>= 2.59),
  automake (>= 1.6),
- debhelper (>= 11~),
+ debhelper-compat (= 12),
  nasm [amd64 hurd-i386 i386 kfreebsd-amd64 kfreebsd-i386],
  pkg-config,
  x11-utils,
  xrdp (>= 0.9.12),
  xserver-xorg-core,
  xserver-xorg-dev (>= 2:1.19),
-Standards-Version: 4.3.0
+Standards-Version: 4.4.1
+Rules-Requires-Root: no
 Vcs-Browser: https://salsa.debian.org/debian-remote-team/xorgxrdp
 Vcs-Git: https://salsa.debian.org/debian-remote-team/xorgxrdp.git
 Homepage: http://xrdp.sourceforge.net
